[package]
name = "tide-subscription"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[dependencies]
async-graphql = "1.12.2"
async-graphql-tide = "1.4.8"
tide = "0.8"
async-tungstenite = { version = "0.4.2", features = ["async-std-runtime"] }
async-std = "1.5.0"
futures = "0.3.5"
bytes = "0.5.4"
books = { path = "../../models/books" }

[dev-dependencies]
serde_json = "1.0.51"
surf = "2.0.0-alpha.1"
